test/tests/stages/14_pointers/invalid_types/extra_credit/prefix_incr_not_lvalue.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(10)
  ;
  int
  *
  identifier(ptr)
  =
  &
  ++
  identifier(i)
  ;
  return
  const int(0)
  ;
  }
